Update RAT Page

--- a/rat.html
+++ b/rat.html
@@ -69,7 +69,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -124,14 +123,16 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Keylogger</h3>
-                        <p>Key Capture Toolkit</p>
+                        <h3>888</h3>
+                        <p>Unauthorized Remote Access Tool</p>
                     </div>
                     <div class="flip-card-back">
                         <h3>Functions</h3>
                         <ul>
-                            <li>Keystroke Logging</li>
-                            <li>Clipboard Capture</li>
+                            <li>Keylogging</li>
+                            <li>Screen Capture</li>
+                            <li>File Management</li>
+                            <li>Command Execution</li>
                         </ul>
                         <a href="path/to/yourfile.zip" download class="download-btn">Download</a>
                     </div>
@@ -141,14 +142,16 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Keylogger</h3>
-                        <p>Key Capture Toolkit</p>
+                        <h3>CraxsRAT</h3>
+                        <p>Android RAT Tool</p>
                     </div>
                     <div class="flip-card-back">
                         <h3>Functions</h3>
                         <ul>
-                            <li>Keystroke Logging</li>
-                            <li>Clipboard Capture</li>
+                            <li>Remote Control</li>
+                            <li>Persistence</li>
+                            <li>Data Exfiltration</li>
+                            <li>Stealth</li>
                         </ul>
                         <a href="path/to/yourfile.zip" download class="download-btn">Download</a>
                     </div>
@@ -158,14 +161,15 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Keylogger</h3>
-                        <p>Key Capture Toolkit</p>
+                        <h3>NaNoCore</h3>
+                        <p>Remote Access Trojan</p>
                     </div>
                     <div class="flip-card-back">
                         <h3>Functions</h3>
                         <ul>
-                            <li>Keystroke Logging</li>
-                            <li>Clipboard Capture</li>
+                            <li>Plugin Support</li>
+                            <li>Remote Control</li>
+                            <li>Data Exfiltration</li>
                         </ul>
                         <a href="path/to/yourfile.zip" download class="download-btn">Download</a>
                     </div>
@@ -176,16 +180,17 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Keylogger</h3>
-                        <p>Key Capture Toolkit</p>
+                        <h3>TheFatRat</h3>
+                        <p>Multi-Platform RAT</p>
                     </div>
                     <div class="flip-card-back">
                         <h3>Functions</h3>
                         <ul>
-                            <li>Keystroke Logging</li>
-                            <li>Clipboard Capture</li>
+                            <li>Payload Customization</li>
+                            <li>Automated Payload Generation</li>
+                            <li>Integration with Metasploit</li>
                         </ul>
-                        <a href="path/to/yourfile.zip" download class="download-btn">Download</a>
+                        <a href="https://github.com/screetsec/TheFatRat" download class="download-btn" target="_blank">Download</a>
                     </div>
                 </div>
             </div>
@@ -194,16 +199,16 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <h3>Keylogger</h3>
-                        <p>Key Capture Toolkit</p>
+                        <h3>Havoc</h3>
+                        <p>Malleable post-exploitation command and control framework</p>
                     </div>
                     <div class="flip-card-back">
                         <h3>Functions</h3>
                         <ul>
-                            <li>Keystroke Logging</li>
-                            <li>Clipboard Capture</li>
+                            <li>SMB support</li>
+                            <li>Token vault</li>
                         </ul>
-                        <a href="path/to/yourfile.zip" download class="download-btn">Download</a>
+                        <a href="https://github.com/HavocFramework/Havoc" download class="download-btn" target="_blank">Download</a>
                     </div>
                 </div>
             </div>
