Update Download Link

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Books</a>
+                        <a class="nav-link" href="./books.html" target="_blank">Books</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blogs</a>
+                        <a class="nav-link" href="blogs.html" target="_blank">Blogs</a>
                     </li>
                 </ul>
             </div>
